--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ ul {
     align-items: center;
 }
 
-.container {
+.container-button {
     width: 1158px;
     margin: 0 auto;
     padding: 0 15px;
@@ -256,7 +256,6 @@ flex-basis: calc((100% - 3 * 24px) / 4);
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    margin-bottom: 8px;
 }
 
 .activities-paragh {
@@ -331,6 +330,7 @@ flex-basis: calc((100% - 3 * 24px) / 4);
     gap: 24px;
     justify-content: center;
     align-items: center;
+    margin-top: 8px;
 }
 
 .socials-item .link {
@@ -385,8 +385,7 @@ cursor: pointer;
 transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover,
-.portfolio-item:focus {
+.portfolio-item:hover {
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
         0px 1px 1px 0px rgba(46, 47, 66, 0.16),
         0px 1px 6px 0px rgba(46, 47, 66, 0.08);
@@ -396,7 +395,6 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-    margin-bottom: 8px;
 }
 
 .portfolio-image {
