--- a/css/styles.css
+++ b/css/styles.css
@@ -443,7 +443,7 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 100px 0;
 }
 
-.container {
+.footer-container {
     display: flex;
     align-items: baseline;
 }
