--- a/css/styles.css
+++ b/css/styles.css
@@ -516,3 +516,27 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .footer-socials .icon {
     fill: #f4f4fd;
 }
+
+.subscribe-input {
+    width: 264px;
+    height: 40px;
+    color: #fcfcfc;
+    border-radius: 4px;
+    border: 1px solid #fcfcfc;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+}
+
+.subscribe-input::placeholder {
+    color: #fcfcfc;
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 2;
+    letter-spacing: 0.04em;
+}
