--- a/css/styles.css
+++ b/css/styles.css
@@ -540,3 +540,35 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     line-height: 2;
     letter-spacing: 0.04em;
 }
+
+.subscribe-btn {
+    min-width: 165px;
+    height: 40px;
+    border-radius: 4px;
+    border: none;
+    background: #4d5ae5;
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    padding: 8px 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    cursor: pointer;
+}
+
+.subscribe-btn-icon {
+    margin-left: 16px;
+    fill: #fff;
+}
+
+.subscribe-form {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 24px;
+}
