--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
         display: inline-block;
         margin-right: 76px;
         text-transform: uppercase;
+        margin-left: 156px;
 }
 
 body {
@@ -592,9 +593,6 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 8px;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
         visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.is-open {
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
