--- a/css/styles.css
+++ b/css/styles.css
@@ -124,15 +124,15 @@ ul {
 .contacts {
     display: flex;
     gap: 40px;
+    margin-right: 180px;
 }
-
-.contacts .link{
-       color: #434455;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        padding: 24px 0;
+.contacts-link {
+    color: #434455;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding: 24px 0;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -696,10 +696,12 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input-icon {
+    color: #2e2f42;
     position: absolute;
     left: 16px;
     top: 50%;
     transform: translateY(-50%);
+    transition: stroke 300ms linear;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
