--- a/css/styles.css
+++ b/css/styles.css
@@ -775,9 +775,9 @@ textarea::placeholder {
 }
 
 .modal-checkbox-input:checked+.modal-checkbox-label .modal-checkbox-check {
-    background-color: #404bbf;
-    border: none;
-    fill: #F4F4FD;
-    border-color: #404BBF;
+    background-color: #404BBF;
+        border: none;
+        fill: #FFFFFF;
+        border-color: #404BBF;
 
 }
