--- a/css/styles.css
+++ b/css/styles.css
@@ -597,6 +597,8 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
+    top:0;
+    left:0;
 }
 
 .modal {
